# latent_eval_training_harness

./: .gitignore  README.md  methodology.md  pyproject.toml
configs/bloom/: behavior_suite.yaml
configs/eval/: broader_suite.yaml  paper_core.yaml
configs/evaluation/: broader_suite.yaml  broader_suite_gh200.yaml  broader_suite_plus_p3_gemma3_gh200.yaml  codi_gpt2_gsm8k_aug_paper_v1_broader_suite_gh200.yaml  codi_gpt2_gsm8k_aug_pilot_v1_broader_suite_gh200.yaml  gpt2_paper_matrix_broader_suite_gh200.yaml  p3_arc_prompt_probe.yaml  paper_core.yaml
configs/train/: gpt2.yaml  llama32_1b.yaml
configs/training/: codi_gpt2_gsm8k_aug_paper_v1.yaml  codi_gpt2_gsm8k_aug_pilot_v1.yaml  cot_sft_gpt2_gsm8k_aug_paper_v1.yaml  gpt2_codi.yaml  llama32_1b_codi.yaml  no_cot_sft_gpt2_gsm8k_aug_paper_v1.yaml
scripts/: bootstrap_lambda_gpu_remote.sh  connect_lambda_gpu.sh  resolve_lambda_gpu.py  run_bloom_behavior_suite.py  run_gpu_eval_suite.sh  run_parallel_eval.py  serve_local_openai_model.sh  serve_vllm_model.sh  setup_gpu_eval_env.sh
src/codi_reimplementation/: __init__.py  cli.py  config.py
src/codi_reimplementation/benchmarks/: __init__.py  answer_parsing.py  registry.py  types.py
src/codi_reimplementation/eval/: __init__.py  metrics.py  reporting.py  runner.py
src/codi_reimplementation/models/: __init__.py  loader.py
src/codi_reimplementation/training/: __init__.py  codi_model.py  config.py  datasets.py  trainer.py
src/latent_harness/: __init__.py
src/latent_harness/core/: __init__.py  checkpoints.py  config.py  io.py  runtime.py
src/latent_harness/evaluation/: __init__.py  benchmarks.py  cli.py  config.py  metrics.py  models.py  reporting.py  runner.py
src/latent_harness/serving/: __init__.py  cli.py  openai_server.py
src/latent_harness/training/: __init__.py  cli.py  config.py  datasets.py  methods.py  trainer.py
tests/: test_answer_parsing.py  test_benchmarks.py  test_evaluation_runner.py  test_method_registry.py  test_pipeline_contracts.py
